# macroex

./: Cargo.toml  README.md  cargo.toml
.github/workflows/: rust.yml
core/: Cargo.toml
core/src/: collections.rs  either.rs  error.rs  extract.rs  lib.rs  literals.rs  map.rs  multi.rs  stream.rs  totokens.rs  transparent_tokens.rs  utilclass.rs  validators.rs
core/tests/: attrs.rs  derive.rs
derive/: Cargo.toml  README.md
derive/src/: lib.rs  macros.rs  metalist.rs
